# RAG

Desktop/rag-study-assistant/: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  RAG.md  README.md  SECURITY.md  api.py  app.py  dashboard.py  docker-compose.yml  pdf_reader.py  pyproject.toml  rag_eval.py  requirements.txt  test_pdf.py
Desktop/rag-study-assistant/tests/: test_pdf_reader.py
