[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "rag-study-assistant"
version = "1.0.0"
description = "AI-powered study assistant using Retrieval-Augmented Generation (RAG)"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Raktim" },
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: General",
]

dependencies = [
    "gradio>=6.0",
    "ollama>=0.4",
    "pypdf>=4.0",
    "chromadb>=1.0",
    "sentence-transformers>=3.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "python-multipart>=0.0.9",
    "pytesseract>=0.3",
    "pdf2image>=1.16",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/rktm0604/RAG"
Repository = "https://github.com/rktm0604/RAG.git"

[project.optional-dependencies]
advanced = [
    "cohere>=4.0",
    "rank-bm25>=0.2",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
